# susanoo

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml  search-index.js
examples/: basic_auth.rs  simple.rs  with_db.rs
implementors/aho_corasick/: trait.Transitions.js
implementors/byteorder/: trait.ByteOrder.js
implementors/percent_encoding/: trait.EncodeSet.js
implementors/rand/: trait.Rand.js
implementors/smallvec/: trait.Array.js
implementors/tokio_io/: trait.AsyncRead.js  trait.AsyncWrite.js
implementors/traitobject/: trait.Trait.js
implementors/unreachable/: trait.UncheckedOptionExt.js
implementors/unsafe_any/: trait.UnsafeAny.js  trait.UnsafeAnyExt.js
implementors/void/: trait.ResultVoidErrExt.js
src/: context.rs  controller.rs  lib.rs  middleware.rs  response.rs  router.rs  server.rs
src/susanoo/: context.rs.html  lib.rs.html  middleware.rs.html  response.rs.html  router.rs.html  server.rs.html
susanoo/: MiddlewareStack.t.html  index.html  macro.try_f!.html  macro.try_f.html  sidebar-items.js  struct.Context.html  struct.Failure.html  struct.MiddlewareStack.html  struct.Response.html  struct.Server.html  trait.Middleware.html  type.AsyncResult.html
susanoo/context/: index.html  sidebar-items.js  struct.Context.html  type.Captures.html
susanoo/contrib/: index.html  sidebar-items.js
susanoo/middleware/: index.html  sidebar-items.js  struct.MiddlewareStack.html  trait.Middleware.html
susanoo/response/: Success.t.html  enum.Success.html  index.html  sidebar-items.js  struct.Failure.html  struct.Response.html  (+1 more)
(+518 files in other folders)
