[package]
name = "susanoo"
description = "A micro Web framework, based on Hyper and Tokio"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
version = "0.0.1"
repository = "https://github.com/ubnt-intrepid/susanoo.git"
documentation = "https://ubnt-intrepid.github.io/susanoo/susanoo"

[dependencies]
hyper = "~0.11"
futures = "~0.1"
tokio-core = "~0.1"
regex = "~0.2"
typemap = "~0.3"
unsafe-any = "~0.4"

[dev-dependencies]
r2d2 = "~0.7"
r2d2_sqlite = "~0.2"

[features]
unstable = []
